Fixed a bug where the scrollbar would shift out of position when used inside a pop-up window

--- a/src/css/scroll.css
+++ b/src/css/scroll.css
@@ -1,8 +1,11 @@
 .scroll-to-future__overlay {
     position: fixed;
+    z-index: 9999;
+
     margin: 0;
     padding: 0;
+
     box-sizing: border-box;
+
     pointer-events: none;
-    overflow: visible;
 }
